# FirstHomework

./: .gitignore  CMakeLists.txt  FirstHomework.cpp  TaskDefinitions.txt
helpers/: CMakeLists.txt  Makefile  Util.cpp  Util.h  cmake_install.cmake
objects/: Book.cpp  Book.h  CMakeLists.txt  Circle.cpp  Force.cpp  Force.h  LineByPointAndAngle.cpp  LineByPointAndAngle.h  Makefile  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  MenuEntry.cpp  MenuEntry.h  Person.cpp  Person.h  SimpleFraction.cpp  Student.cpp  Student.h  cmake_install.cmake
tasks/: CMakeLists.txt  Makefile  Task.cpp  Task.h  Task1.cpp  Task1.h  Task10.cpp  Task10.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h  Task4.cpp  Task4.h  Task5.cpp  Task5.h  Task6.cpp  Task6.h  Task7.cpp  Task7.h  Task8.cpp  Task8.h  Task9.cpp  Task9.h  cmake_install.cmake
